--- a/QuizHeads/app/src/main/res/layout/activity_signup.xml
+++ b/QuizHeads/app/src/main/res/layout/activity_signup.xml
@@ -7,6 +7,21 @@
     android:gravity="center">
 
     <EditText
+        android:id="@+id/firstNameEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="First Name"
+        android:inputType="text"
+        android:layout_marginBottom="16dp"/>
+
+    <EditText
+        android:id="@+id/lastNameEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Last Name"
+        android:inputType="text"
+        android:layout_marginBottom="16dp"/>
+    <EditText
         android:id="@+id/emailEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
